# rustmedia

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml
.github/workflows/: ci.yml  release.yml
crates/rustmedia/: Cargo.toml
crates/rustmedia-cli/: Cargo.toml
crates/rustmedia-cli/src/: inspect.rs  main.rs  transform.rs  ui.rs
crates/rustmedia-cli/tests/: cli.rs
crates/rustmedia-core/: Cargo.toml
crates/rustmedia-core/src/: codec.rs  error.rs  format.rs  lib.rs  metadata.rs  packet.rs  time.rs  track.rs
crates/rustmedia-formats/: Cargo.toml
crates/rustmedia-formats/benches/: demux.rs
crates/rustmedia-formats/src/: demux.rs  detect.rs  lib.rs  mp3.rs  mux.rs  wav.rs
crates/rustmedia-formats/src/matroska/: ebml.rs  ids.rs  mod.rs
crates/rustmedia-formats/src/mp4/: boxes.rs  meta.rs  mod.rs  mux.rs  sample_entry.rs  sample_table.rs  writer.rs
crates/rustmedia-formats/tests/: audio_inspect.rs  matroska_inspect.rs  mp4_inspect.rs  mux_roundtrip.rs  robustness.rs
crates/rustmedia-io/: Cargo.toml
crates/rustmedia-io/src/: lib.rs  reader.rs  source.rs
crates/rustmedia/examples/: inspect.rs  packets.rs  remux.rs
crates/rustmedia/src/: lib.rs  media.rs  ops.rs
crates/rustmedia/tests/: ops_roundtrip.rs
docs/: architecture.md  benchmarks.md  cli.md  format-support.md  roadmap.md
xtask/: Cargo.toml
xtask/src/: main.rs
