[package]
name = "rustmedia-cli"
description = "The `rustmedia` command-line tool: inspect, remux, trim, and extract media files."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "rustmedia"
path = "src/main.rs"
# The binary is named `rustmedia`, same as the library crate; skip its rustdoc
# output so `cargo doc --workspace` doesn't collide on `rustmedia/index.html`.
doc = false

[dependencies]
rustmedia = { workspace = true, features = ["serde"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
