[package]
name = "rustmedia-io"
description = "Byte-level reading and writing primitives (endian-aware readers, seekable sources) for the RustMedia toolkit."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
rustmedia-core = { workspace = true }

[lints]
workspace = true
